# optimus-dashboard2

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  metrics.py  rules.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: rest.ts  ws.ts
frontend/src/components/: Alerts.tsx  Charts.tsx  Pose3D.tsx  StatusBar.tsx
frontend/src/state/: store.ts
