[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optimus-telemetry-backend"
version = "0.1.0"
description = "Optimus Telemetry & Pose Dashboard Backend"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "prometheus-client>=0.19.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]